--- a/admin-subscriptions.html
+++ b/admin-subscriptions.html
@@ -1,161 +1,192 @@
-<<<<<<< HEAD
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>LogicPals Admin — Subscriptions</title>
-  <style>
-    :root{color-scheme:dark;}
-    html,body{height:100%;margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif;background:#070b10;color:#e8eef8;}
-    .wrap{min-height:100%;display:flex;flex-direction:column;align-items:center;justify-content:center;padding:24px;}
-    .card{width:min(920px,100%);background:rgba(18,25,35,.78);border:1px solid rgba(255,255,255,.10);border-radius:20px;box-shadow:0 18px 60px rgba(0,0,0,.55);backdrop-filter:blur(18px);padding:18px 18px 14px;}
-    .row{display:flex;gap:12px;flex-wrap:wrap;align-items:center;justify-content:space-between;}
-    h1{margin:0;font-size:18px;}
-    p{margin:10px 0 0;opacity:.85;line-height:1.35;}
-    .btns{display:flex;gap:10px;flex-wrap:wrap;}
-    .btn{appearance:none;border:1px solid rgba(255,255,255,.14);background:rgba(255,255,255,.06);color:#e8eef8;border-radius:12px;padding:10px 12px;font-weight:600;cursor:pointer;}
-    .btn:hover{background:rgba(255,255,255,.10);} 
-    .pill{font-size:12px;padding:6px 10px;border-radius:999px;border:1px solid rgba(255,255,255,.14);background:rgba(255,255,255,.06);}
-    .muted{opacity:.7}
-    .err{margin-top:10px;color:#ffb3b3;white-space:pre-wrap;}
-  </style>
+  <link rel="stylesheet" href="lp_design.css" />
 </head>
 <body>
   <div class="wrap">
-    <div class="card">
-      <div class="row">
+    <div class="lp-topbar">
+      <div class="lp-brand">
+        <div class="lp-logo"></div>
         <div>
-          <h1>LogicPals Admin — Subscriptions</h1>
-          <div class="pill muted" id="sessionPill">Checking session…</div>
-        </div>
-        <div class="btns">
-          <button class="btn" id="backBtn">Back to Admin</button>
-          <button class="btn" id="logoutBtn">Log out</button>
+          <div class="lp-title">Subscriptions</div>
+          <div class="lp-sub">Admin-only — list / extend / cancel (RPC-only)</div>
         </div>
       </div>
-      <p>
-        This page is a placeholder for your subscriptions dashboard. It is deployed as a separate static HTML so the Admin console can open it without any framework build.
-      </p>
-      <p class="muted">
-        Next: wire to your <code>subscriptions</code> tables / Stripe webhooks when you reach the Payments &amp; Billing step on the roadmap.
-      </p>
-      <div class="err" id="err"></div>
+      <div class="lp-right">
+        <div class="lp-badge" id="who">Signed out</div>
+        <button class="lp-btn" id="btnBack">Back to Admin</button>
+        <button class="lp-btn danger" id="btnSignOut">Log out</button>
+      </div>
+    </div>
+
+    <div class="lp-card">
+      <div class="lp-panelTitle">
+        <h3>Manage a customer</h3>
+        <span class="lp-statusPill" id="pill">Ready</span>
+      </div>
+
+      <div class="filters" style="margin-top:12px">
+        <div class="full">
+          <label>Customer email</label>
+          <input id="email" placeholder="student_or_parent@email.com" autocomplete="email" />
+        </div>
+
+        <div class="full row">
+          <button class="lp-btn primary" id="btnLoad">Load subscriptions</button>
+          <button class="lp-btn" id="btnSummary">Load trust summary</button>
+        </div>
+
+        <div>
+          <label>Extend months</label>
+          <input id="extendMonths" placeholder="1" inputmode="numeric" />
+        </div>
+        <div>
+          <label>Track</label>
+          <select id="track">
+            <option value="regular">Regular</option>
+            <option value="olympiad">Olympiad</option>
+          </select>
+        </div>
+        <div class="full row">
+          <button class="lp-btn primary" id="btnExtend">Extend</button>
+          <button class="lp-btn danger" id="btnCancel">Cancel</button>
+        </div>
+      </div>
+
+      <div style="height:10px"></div>
+      <div class="lp-muted">Output</div>
+      <pre class="lp-mono" id="out" style="white-space:pre-wrap;margin:0;background:rgba(0,0,0,.18);border:1px solid var(--line);border-radius:14px;padding:10px;min-height:140px"></pre>
+
+      <div class="lp-hint" style="margin-top:10px">
+        Expected RPCs: <span class="lp-mono">admin_list_subscriptions</span>, <span class="lp-mono">admin_extend_subscription</span>,
+        <span class="lp-mono">admin_cancel_subscription</span>, <span class="lp-mono">admin_trust_summary</span>.
+      </div>
     </div>
   </div>
 
+  <script src="/api/env"></script>
   <script type="module">
-    import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm';
+    import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
 
-    const SUPABASE_URL = 'https://ovszuxerimbmzfblzkgd.supabase.co';
-    const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im92c3p1eGVyaW1ibXpmYmx6a2dkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ1MDA4MzgsImV4cCI6MjA4MDA3NjgzOH0.cmMF8OsC8J_B-t0aBldiMqv4XiNZtJWSGMqg8At9V14';
+    const { SUPABASE_URL, SUPABASE_ANON_KEY } = window.__LP_ENV || {};
+    if(!SUPABASE_URL || !SUPABASE_ANON_KEY){
+      alert("Missing Supabase env. Ensure /api/env is deployed and SUPABASE_URL / SUPABASE_ANON_KEY are set.");
+    }
 
-    const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-    const sessionPill = document.getElementById('sessionPill');
-    const errEl = document.getElementById('err');
+    const sb = createClient(SUPABASE_URL, SUPABASE_ANON_KEY, {
+      auth: { persistSession:true, autoRefreshToken:true, detectSessionInUrl:false, storage: window.localStorage }
+    });
 
-    const goAdmin = () => window.location.href = '/admin.html';
-    document.getElementById('backBtn').onclick = goAdmin;
-
-    document.getElementById('logoutBtn').onclick = async () => {
-      await supabase.auth.signOut();
-      goAdmin();
+    const out = document.getElementById('out');
+    const pill = document.getElementById('pill');
+    const setPill = (t, kind='ok') => {
+      pill.textContent = t;
+      const map = { ok:'rgba(79,140,255,.14)', warn:'rgba(255,200,0,.12)', err:'rgba(255,77,77,.12)' };
+      pill.style.background = map[kind] || map.ok;
+      pill.style.borderColor = kind==='err' ? 'rgba(255,77,77,.30)' : kind==='warn' ? 'rgba(255,200,0,.28)' : 'rgba(255,255,255,.10)';
     };
 
-    try {
-      const { data: { session }, error } = await supabase.auth.getSession();
-      if (error) throw error;
-      if (!session?.user) {
-        sessionPill.textContent = 'Not signed in';
-        goAdmin();
-      } else {
-        sessionPill.textContent = `Signed in: ${session.user.email ?? session.user.id}`;
+    async function getMyRole(){
+      for(const fn of ['admin_get_my_role','admin_get_my_roles']){
+        try{
+          const { data, error } = await sb.rpc(fn);
+          if(!error && data){
+            if(typeof data === 'string') return data;
+            if(Array.isArray(data) && data[0]) return (data[0].role || data[0]);
+            if(typeof data.role === 'string') return data.role;
+          }
+        }catch(_){}
       }
-    } catch (e) {
-      errEl.textContent = String(e?.message ?? e);
-      sessionPill.textContent = 'Session error';
+      return null;
     }
-  </script>
-</body>
-</html>
-=======
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>LogicPals Admin — Subscriptions</title>
-  <style>
-    :root{color-scheme:dark;}
-    html,body{height:100%;margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif;background:#070b10;color:#e8eef8;}
-    .wrap{min-height:100%;display:flex;flex-direction:column;align-items:center;justify-content:center;padding:24px;}
-    .card{width:min(920px,100%);background:rgba(18,25,35,.78);border:1px solid rgba(255,255,255,.10);border-radius:20px;box-shadow:0 18px 60px rgba(0,0,0,.55);backdrop-filter:blur(18px);padding:18px 18px 14px;}
-    .row{display:flex;gap:12px;flex-wrap:wrap;align-items:center;justify-content:space-between;}
-    h1{margin:0;font-size:18px;}
-    p{margin:10px 0 0;opacity:.85;line-height:1.35;}
-    .btns{display:flex;gap:10px;flex-wrap:wrap;}
-    .btn{appearance:none;border:1px solid rgba(255,255,255,.14);background:rgba(255,255,255,.06);color:#e8eef8;border-radius:12px;padding:10px 12px;font-weight:600;cursor:pointer;}
-    .btn:hover{background:rgba(255,255,255,.10);} 
-    .pill{font-size:12px;padding:6px 10px;border-radius:999px;border:1px solid rgba(255,255,255,.14);background:rgba(255,255,255,.06);}
-    .muted{opacity:.7}
-    .err{margin-top:10px;color:#ffb3b3;white-space:pre-wrap;}
-  </style>
-</head>
-<body>
-  <div class="wrap">
-    <div class="card">
-      <div class="row">
-        <div>
-          <h1>LogicPals Admin — Subscriptions</h1>
-          <div class="pill muted" id="sessionPill">Checking session…</div>
-        </div>
-        <div class="btns">
-          <button class="btn" id="backBtn">Back to Admin</button>
-          <button class="btn" id="logoutBtn">Log out</button>
-        </div>
-      </div>
-      <p>
-        This page is a placeholder for your subscriptions dashboard. It is deployed as a separate static HTML so the Admin console can open it without any framework build.
-      </p>
-      <p class="muted">
-        Next: wire to your <code>subscriptions</code> tables / Stripe webhooks when you reach the Payments &amp; Billing step on the roadmap.
-      </p>
-      <div class="err" id="err"></div>
-    </div>
-  </div>
 
-  <script type="module">
-    import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm';
+    const { session } = await window.LPAuth.attach(sb, { requireAuth:true, redirectTo:'login_unified.html' });
 
-    const SUPABASE_URL = 'https://ovszuxerimbmzfblzkgd.supabase.co';
-    const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im92c3p1eGVyaW1ibXpmYmx6a2dkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ1MDA4MzgsImV4cCI6MjA4MDA3NjgzOH0.cmMF8OsC8J_B-t0aBldiMqv4XiNZtJWSGMqg8At9V14';
+    const role = await getMyRole();
+    if(!role){
+      out.textContent = JSON.stringify({ error:"No admin role. Ask a super_admin to assign you a role." }, null, 2);
+      setPill('No access','err');
+      throw new Error("No admin role");
+    }
 
-    const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-    const sessionPill = document.getElementById('sessionPill');
-    const errEl = document.getElementById('err');
+    document.getElementById('btnBack').onclick = ()=> window.location.href = './admin_clean_fixed.html';
 
-    const goAdmin = () => window.location.href = '/admin.html';
-    document.getElementById('backBtn').onclick = goAdmin;
+    async function rpcCall(fn, args){
+      const { data, error } = await sb.rpc(fn, args || {});
+      if(error) throw error;
+      return data;
+    }
 
-    document.getElementById('logoutBtn').onclick = async () => {
-      await supabase.auth.signOut();
-      goAdmin();
+    document.getElementById('btnLoad').onclick = async ()=>{
+      out.textContent = 'Loading…';
+      try{
+        const target_email = document.getElementById('email').value.trim().toLowerCase();
+        const data = await rpcCall('admin_list_subscriptions', { target_email });
+        out.textContent = JSON.stringify({ ok:true, data }, null, 2);
+      }catch(e){
+        out.textContent = JSON.stringify({
+          error: (e?.message || String(e)),
+          hint: "Create admin_list_subscriptions(target_email) to return both Regular and Olympiad subscription states without leaking other users."
+        }, null, 2);
+      }
     };
 
-    try {
-      const { data: { session }, error } = await supabase.auth.getSession();
-      if (error) throw error;
-      if (!session?.user) {
-        sessionPill.textContent = 'Not signed in';
-        goAdmin();
-      } else {
-        sessionPill.textContent = `Signed in: ${session.user.email ?? session.user.id}`;
+    document.getElementById('btnSummary').onclick = async ()=>{
+      out.textContent = 'Loading…';
+      try{
+        const target_email = document.getElementById('email').value.trim().toLowerCase();
+        const data = await rpcCall('admin_trust_summary', { target_email });
+        out.textContent = JSON.stringify({ ok:true, data }, null, 2);
+      }catch(e){
+        out.textContent = JSON.stringify({
+          error: (e?.message || String(e)),
+          hint: "In Step 7, admin_trust_summary can return: roles, entitlements, recent scoring_events counts, bad_receipt_hashes, audit trail."
+        }, null, 2);
       }
-    } catch (e) {
-      errEl.textContent = String(e?.message ?? e);
-      sessionPill.textContent = 'Session error';
-    }
+    };
+
+    document.getElementById('btnExtend').onclick = async ()=>{
+      out.textContent = 'Extending…';
+      setPill('Working','warn');
+      try{
+        const target_email = document.getElementById('email').value.trim().toLowerCase();
+        const track = document.getElementById('track').value;
+        const months = Number(String(document.getElementById('extendMonths').value||'').trim() || 1);
+        const data = await rpcCall('admin_extend_subscription', { target_email, track, months });
+        out.textContent = JSON.stringify({ ok:true, data }, null, 2);
+        setPill('Extended','ok');
+      }catch(e){
+        out.textContent = JSON.stringify({
+          error: (e?.message || String(e)),
+          hint: "Create admin_extend_subscription(target_email, track, months) with audit + max duration rules."
+        }, null, 2);
+        setPill('Failed','err');
+      }
+    };
+
+    document.getElementById('btnCancel').onclick = async ()=>{
+      out.textContent = 'Cancelling…';
+      setPill('Working','warn');
+      try{
+        const target_email = document.getElementById('email').value.trim().toLowerCase();
+        const track = document.getElementById('track').value;
+        const data = await rpcCall('admin_cancel_subscription', { target_email, track });
+        out.textContent = JSON.stringify({ ok:true, data }, null, 2);
+        setPill('Cancelled','ok');
+      }catch(e){
+        out.textContent = JSON.stringify({
+          error: (e?.message || String(e)),
+          hint: "Create admin_cancel_subscription(target_email, track) and log who/why."
+        }, null, 2);
+        setPill('Failed','err');
+      }
+    };
   </script>
+
+  <script src="lp_auth.js"></script>
 </body>
 </html>
->>>>>>> 8bc5b78514e083aaa9d6e1eda3db2fdf1c3d5e9c
