--- a/admin-payments.html
+++ b/admin-payments.html
@@ -6,7 +6,7 @@
   <title>LogicPals Console — Payments</title>
   <link rel="stylesheet" href="/lp_design.css"/>
   <script src="/api/env"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@sb/sb-js@2"></script>
   <style>
     body{background:#f5f7fb;}
     .wrap{max-width:1100px;margin:0 auto;padding:24px;}
