--- a/admin-login.html
+++ b/admin-login.html
@@ -107,7 +107,7 @@
     .tiny{ font-size:11px; color:#9CA3AF; margin-top:10px; text-align:center; }
   </style>
 
-  <!-- Runtime config injected by Vercel /api/env (same pattern as admin.html) -->
+  <!-- Runtime config injected by Vercel /api/env -->
   <script src="/api/env"></script>
 </head>
 <body>
@@ -162,7 +162,7 @@
   <script type="module">
     import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
 
-    // --------- Enterprise constants ----------
+    // ---------- Constants ----------
     const ALLOWED_ADMIN_ROLES = new Set([
       "super_admin",
       "admin_regular",
@@ -172,7 +172,7 @@
       "reviewer",
     ]);
 
-    // --------- UI refs ----------
+    // ---------- UI ----------
     const pillText = document.getElementById("pillText");
     const err = document.getElementById("err");
     const ok = document.getElementById("ok");
@@ -194,8 +194,7 @@
     }
     function setPill(text) { pillText.textContent = text; }
 
-    // --------- Config ----------
-    // admin.html expects window.__LP_ENV from /api/env
+    // ---------- Config ----------
     const { SUPABASE_URL, SUPABASE_ANON_KEY } = window.__LP_ENV || {};
     if (!SUPABASE_URL || !SUPABASE_ANON_KEY) {
       setPill("Missing config");
@@ -211,11 +210,17 @@
       }
     });
 
-    // --------- Role gate ----------
     async function fetchMyRole() {
       const { data, error } = await supabase.rpc("rpc_lp_my_role");
       if (error) throw error;
       return data; // can be null
+    }
+
+    // CRITICAL: store token for ab-dashboard.html
+    async function storeAccessToken() {
+      const { data } = await supabase.auth.getSession();
+      const token = data?.session?.access_token || null;
+      if (token) localStorage.setItem("lp_access_token", token);
     }
 
     async function hardRedirectToAdmin() {
@@ -229,13 +234,17 @@
       if (!session) return { ok: false, reason: "No active session." };
 
       let role = null;
-      try { role = await fetchMyRole(); } catch (e) {
+      try {
+        role = await fetchMyRole();
+      } catch (e) {
         await supabase.auth.signOut();
+        localStorage.removeItem("lp_access_token");
         return { ok: false, reason: `${reasonPrefix}Role check failed: ${e?.message || e}` };
       }
 
       if (!role || !ALLOWED_ADMIN_ROLES.has(role)) {
         await supabase.auth.signOut();
+        localStorage.removeItem("lp_access_token");
         return { ok: false, reason: `${reasonPrefix}Not authorized for admin console. Your role is: ${role ?? "none"}` };
       }
 
@@ -248,6 +257,7 @@
         setPill("Checking session…");
         const gate = await enforceAdminGateOrSignOut("");
         if (gate.ok) {
+          await storeAccessToken();
           showOk(`Signed in as admin role: ${gate.role}. Redirecting…`);
           await hardRedirectToAdmin();
         } else {
@@ -291,6 +301,7 @@
           return;
         }
 
+        await storeAccessToken(); // <-- enables ab-dashboard.html
         showOk(`Welcome. Role: ${gate.role}. Redirecting…`);
         setPill("Authorized");
         await hardRedirectToAdmin();
@@ -305,7 +316,10 @@
     });
 
     supabase.auth.onAuthStateChange((event) => {
-      if (event === "SIGNED_OUT") setPill("Signed out");
+      if (event === "SIGNED_OUT") {
+        localStorage.removeItem("lp_access_token");
+        setPill("Signed out");
+      }
     });
   </script>
 </body>
