fix: ab-dashboard back link to /admin.html

--- a/public/admin/ab-dashboard.html
+++ b/public/admin/ab-dashboard.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div style="margin-bottom:10px;">
-      <a href="admin.html">← Back to Admin</a>
+      <a href="/admin.html">← Back to Admin</a>
     </div>
 
     <h1>A/B Dashboard</h1>
